# s2-documentation

./: 404.html  CNAME  Justfile  LICENSE  README.md  index.html  sitemap.xml
.github/workflows/: deploy.yml  test-deploy.yml
assets/css/: styles.77d232fb.css  (+2 more)
markdown-page/: index.html
structured-documentation/: Commodity.toml  CommodityQuantity.toml  ControlType.toml  Currency.toml  DDBC.ActuatorDescription.toml  DDBC.ActuatorStatus.toml  DDBC.AverageDemandRateForecast.toml  DDBC.AverageDemandRateForecastElement.toml  DDBC.Instruction.toml  DDBC.OperationMode.toml  DDBC.SystemDescription.toml  DDBC.TimerStatus.toml  Duration.toml  EnergyManagementRole.toml  FRBC.ActuatorDescription.toml  FRBC.ActuatorStatus.toml  FRBC.FillLevelTargetProfile.toml  FRBC.FillLevelTargetProfileElement.toml  FRBC.Instruction.toml  FRBC.LeakageBehaviour.toml  FRBC.LeakageBehaviourElement.toml  FRBC.OperationMode.toml  FRBC.OperationModeElement.toml  FRBC.StorageDescription.toml  FRBC.StorageStatus.toml  FRBC.SystemDescription.toml  FRBC.TimerStatus.toml  FRBC.UsageForecast.toml  FRBC.UsageForecastElement.toml  Handshake.toml  HandshakeResponse.toml  ID.toml  InstructionStatus.toml  InstructionStatusUpdate.toml  NumberRange.toml  OMBC.Instruction.toml  OMBC.OperationMode.toml  OMBC.Status.toml  OMBC.SystemDescription.toml  OMBC.TimerStatus.toml  (+36 more)
structured-documentation-generator/: Cargo.toml
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website-generator/: Cargo.toml  rustfmt.toml
website-generator/src/: doc_item.handlebars  main.rs
(+406 files in other folders)
