[package]
name = "generate-docusaurus"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "6.3.1"
serde = { version = "1.0.218", features = ["derive"] }
toml = { version = "0.8.20", features = ["preserve_order"] }
s2-documentation-generator = { path = "../structured-documentation-generator" }
serde_json = "1.0.140"
